<resources>
    <string name="app_name">Three in a row</string>
    <string name="start_button">Start a game</string>
    <string name="exit_button">Close app</string>
    <string name="NG_button">&#128260; Reset game</string>
    <string name="home_button">&#127968; Home</string>
    <string name="finish_button">Finish</string>
    <string name="enter_names">Enter your name below</string>
    <string name="turn_message"></string>
    <string name="player1">Enter name here...</string>
    <string name="player2">Enter name here...</string>
    <string name="p1WinStreak">0</string>
    <string name="p2WinStreak">0</string>
    <string name="splash_screen_label">Three in a row</string>
    <string name="player1_heading">Player 1 name:</string>
    <string name="player2_heading">Player 2 name:</string>
    <string name="error_message_names">Enter names please!</string>
    <string name="heading_createLobby">Finding a second player...</string>
    <string name="code_heading">Enter code to create or join a lobby!</string>
    <string name="create_button">Host game</string>
    <string name="join_button">Join game</string>
    <string name="enter_game_code">Enter code here...</string>
</resources>