<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_main"
    tools:context=".CreateLobbyActivity">

    <TextView
        android:id="@+id/game_code_heading"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:text="@string/code_heading"
        android:textSize="@dimen/textSize_PlayerNamePregame"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enter_game_code"
        app:layout_constraintStart_toStartOf="@+id/enter_game_code"
        app:layout_constraintTop_toBottomOf="@+id/findPlayersHeading"
        app:layout_constraintVertical_bias="0.992" />

    <TextView
        android:id="@+id/findPlayersHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/heading_createLobby"
        android:textSize="@dimen/textSize_EnterNames"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_createLobby"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/button_salmon"
        android:text="@string/create_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findPlayersHeading" />

    <Button
        android:id="@+id/btn_joinLobby"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_purple"
        android:text="@string/join_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_createLobby" />

    <EditText
        android:id="@+id/enter_game_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/enter_game_code"
        android:inputType="textPersonName"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findPlayersHeading" />

    <ProgressBar
        android:id="@+id/loadingGame"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findPlayersHeading"
        app:layout_constraintVertical_bias="0.081" />

</androidx.constraintlayout.widget.ConstraintLayout>