<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/PlayerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        android:textStyle="bold"
        android:textSize="@dimen/textSize_PlayerNameIngame"
        android:textAlignment="center"
        android:textColor="@color/white_main"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        />

    <TextView
        android:id="@+id/PlayerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:textStyle="bold"
        android:textSize="@dimen/textSize_PlayerNameIngame"
        android:textAlignment="center"
        android:textColor="@color/orange_main"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="40dp"
        />

    <TextView
        android:id="@+id/PlayerOneWinStreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p1WinStreak"
        android:textAlignment="center"
        android:textSize="@dimen/textSize_WinStreak"
        app:layout_constraintEnd_toEndOf="@+id/PlayerOne"
        app:layout_constraintStart_toStartOf="@+id/PlayerOne"
        app:layout_constraintTop_toBottomOf="@+id/PlayerOne" />

    <TextView
        android:id="@+id/PlayerTwoWinStreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2WinStreak"
        android:textAlignment="center"
        android:textSize="@dimen/textSize_WinStreak"
        app:layout_constraintEnd_toEndOf="@+id/PlayerTwo"
        app:layout_constraintRight_toRightOf="@+id/PlayerTwo"
        app:layout_constraintStart_toStartOf="@+id/PlayerTwo"
        app:layout_constraintTop_toBottomOf="@+id/PlayerTwo" />

    <TextView
        android:id="@+id/WinnerDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_Winner"
        android:textAlignment="center"
        android:text="@string/winner"
        app:layout_constraintTop_toBottomOf="@+id/PlayerOneWinStreak"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/Button_0"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:textSize="@dimen/textSize_GameInput"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_main"
        app:layout_constraintTop_toBottomOf="@id/WinnerDisplay"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/Button_1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:textSize="@dimen/textSize_GameInput"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_main"
        app:layout_constraintTop_toTopOf="@id/Button_0"
        app:layout_constraintLeft_toRightOf="@id/Button_0"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="7dp"
        />

    <Button
        android:id="@+id/Button_2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:textSize="@dimen/textSize_GameInput"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_main"
        app:layout_constraintTop_toTopOf="@id/Button_1"
        app:layout_constraintLeft_toRightOf="@id/Button_1"
        android:layout_marginLeft="7dp"
        />

    <Button
        android:id="@+id/Button_3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:textSize="@dimen/textSize_GameInput"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_main"
        app:layout_constraintTop_toBottomOf="@id/Button_0"
        app:layout_constraintLeft_toLeftOf="@id/Button_0"
        />

    <Button
        android:id="@+id/Button_4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:textSize="@dimen/textSize_GameInput"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_main"
        app:layout_constraintTop_toBottomOf="@id/Button_1"
        app:layout_constraintLeft_toLeftOf="@id/Button_1"
        />

    <Button
        android:id="@+id/Button_5"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:textSize="@dimen/textSize_GameInput"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_main"
        app:layout_constraintTop_toBottomOf="@id/Button_2"
        app:layout_constraintLeft_toLeftOf="@id/Button_2"
        />

    <Button
        android:id="@+id/Button_6"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:textSize="@dimen/textSize_GameInput"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_main"
        app:layout_constraintTop_toBottomOf="@id/Button_3"
        app:layout_constraintLeft_toLeftOf="@id/Button_3"
        />

    <Button
        android:id="@+id/Button_7"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:textSize="@dimen/textSize_GameInput"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_main"
        app:layout_constraintTop_toBottomOf="@id/Button_4"
        app:layout_constraintLeft_toLeftOf="@id/Button_4"
        />

    <Button
        android:id="@+id/Button_8"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:textSize="@dimen/textSize_GameInput"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_main"
        app:layout_constraintTop_toBottomOf="@id/Button_5"
        app:layout_constraintLeft_toLeftOf="@id/Button_5"
        />

    <Button
        android:id="@+id/Button_NewGame"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/button_salmon"
        android:text="@string/NG_button"
        android:textSize="@dimen/textSize_Button"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_7"
        app:layout_constraintVertical_bias="0.207" />

    <Button
        android:id="@+id/Button_Home"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/button_purple"
        android:text="@string/home_button"
        android:textColor="@color/white_main"
        android:textSize="@dimen/textSize_Button"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_NewGame"
        app:layout_constraintVertical_bias="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>